tidied up the code, added images to gallery, fixed gaps and amended form page

--- a/css/style.css
+++ b/css/style.css
@@ -182,6 +182,10 @@ footer {
 
 /* ----- Gallery ----- */
 
+.photo-showcase {
+    width: 100%;
+}
+
 .page-header{
     margin: 20px;
     text-align: center;
@@ -189,7 +193,7 @@ footer {
 }
 
 .hr-dark{
-    width: 75%;
+    width: 90%;
 }
 
 div.gallery a img {
@@ -228,7 +232,7 @@ html {
 }
 
 .youtube-video {
-    width: 75%;
+    width: 100%;
     text-align: center;
     margin: 0;
     padding: 0;
@@ -236,7 +240,7 @@ html {
 
 .responsive-video {
   position: relative;
-  width: 75%;
+  width: 100%;
   padding-bottom: 56.25%; 
   height: 0;
   margin: 0;
@@ -258,7 +262,7 @@ html {
 }
 
 .artwork img{
-    width: 50%;
+    width: 60%;
     margin: 20px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -275,15 +279,13 @@ html {
     /*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */ 
 }
 
-background: #b71c1c;
-
 .more-releases {
     width: 100%;
-    text-align: center;
+    text-align: center
 }
 
 .more-releases img {
-    width: 20%;
+    width: 100%;
     padding: 10px;
     margin: 10px;
 }
@@ -292,20 +294,28 @@ background: #b71c1c;
 /* ------ form------- */
 
 form {
+    width: 50%;
     padding: 50px 30px;
     font-family: 'Inconsolata', monospace;
+    background-color: #eceff1;
+    position: relative;
 }
 
-.booking-form {
+.booking-form  {
     width: 100%;
-    padding: 10px;
-    margin: 40px 20px;
+    padding-top: 50px;
+    padding: 5px;
+    margin: 20px 20px;
     font-family: 'Inconsolata', monospace;
-    /*background: #eceff1; */
+    /*background: #eceff1;*/
 }
 
-.booking-form img {
+.live-image {
+    width: 85%;
+    margin: 0 auto;
     text-align: center;
+    padding-bottom: 40px;
+    /*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
 }
 
 /* ----- hover ----- */
@@ -338,14 +348,12 @@ form {
     .card3 {
         display: none;
     }
-    .more-releases img {
-        width: 40%;
-        padding: 10px;
-        margin: 10px;
+    .artwork img {
+        width: 60%;
     }
 }
 
-@media screen and (max-width: 769px) {
+@media (max-width: 766px) {
     footer {
         height: 100px;
     }
@@ -369,7 +377,36 @@ form {
     .responsive {
         width: 100%;
      }
+     .artwork img {
+        width: 65%;
+     }
+    .track-listing {
+        padding-left: 50px;
+    }
 }
+
+@media (max-width: 576px) {
+    .spotify {
+        text-align: center;
+        width: 100%;
+        padding: 10px;
+    }
+    .track-listing {
+        text-align: left;
+        padding-left: 50px;
+        font-size: 14px;
+    }
+    .more-releases {
+         width: 90%;
+     }
+     .artwork {
+         text-align: center;
+     }
+     .artwork img {
+        width: 90%;
+     }
+}
+    
 
 .clearfix:after {
   content: "";
